Can't texture paint an images sequence anymore #74425

Closed
opened 2020-03-04 10:23:27 +01:00 by Phil Manzano · 9 comments

Operating system: Ubuntu 19.10, Windows 10 (2.82)
Graphics card: GTX970

Broken: 2.83 alpha (and 2.82, didn't test before)
Worked: 2.74, 2.44
Working tutorials on previous versions (2.7x):
https://blenderartists.org/t/painting-image-sequences-rotoscoping-in-blender/394587/6
https://blenderartists.org/t/can-i-create-an-image-sequence-in-texture-paint-mode/616270

In texture paint, you can play an images sequence:
816c88ad2b.jpeg

but it can’t be modified, brush is simply not drawing any thing

Exact steps for others to reproduce the error

  • Download fresh Blender 2.83 alpha
  • Since we can't pack images sequence and if you don't have an image sequence at hand (got something in /tmp?), create a quick image sequence
  • Create another scene, or file
  • Import image as plane with an images sequence (N panel > Animate Image Sequences) or simply open images sequence
  • In texture paint workspace (texture paint mode), image sequence is visible, playable, but not paintable:
  • if you zoom (after paint tentative), image disappears
  • if you don't play with zoom, image is here, untouched by the brush
    In 2.82, N panel > Image > under file path > message = Can't load image:
    see https://blenderartists.org/t/how-to-paint-an-image-sequence-i-can-only-view-it/1210707

Additional notes:
Texture Paint > Image (menu) > "Save all images" is still present, was used for images sequence.
Also tried using Composite > Images sequence node > Viewer + Render result (render result is a single generated image, we should be able to paint on it before saving it) to Texture Paint, no luck.
Also tried adding it as a texture. No luck
Also tried using Data API, pack checkbox is gone.
Option > "Quick Edit" button is gone? It was pretty useful.
Import image as plane correctly sets the frames number in the material, but N panel of texture paint is 100, like when creating a texture.
Maybe not related, on linux, moving the brush center under the N panel freezes the mouse, you simply can't go under it.

Based on the default startup

untitled.blend

Operating system: Ubuntu 19.10, Windows 10 (2.82) Graphics card: GTX970 Broken: 2.83 alpha (and 2.82, didn't test before) Worked: 2.74, 2.44 Working tutorials on previous versions (2.7x): https://blenderartists.org/t/painting-image-sequences-rotoscoping-in-blender/394587/6 https://blenderartists.org/t/can-i-create-an-image-sequence-in-texture-paint-mode/616270 In texture paint, you can play an images sequence: https://media.blenderartists.org/uploads/default/original/4X/8/1/6/816c88ad2bf5b49e196085885fbb3064a5bf3124.jpeg but it can’t be modified, brush is simply not drawing any thing **Exact steps for others to reproduce the error** - Download fresh Blender 2.83 alpha - Since we can't pack images sequence and if you don't have an image sequence at hand (got something in /tmp?), create a quick image sequence - Create another scene, or file - Import image as plane with an images sequence (N panel > Animate Image Sequences) or simply open images sequence - In texture paint workspace (texture paint mode), image sequence is visible, playable, but not paintable: - if you zoom (after paint tentative), image disappears - if you don't play with zoom, image is here, untouched by the brush In 2.82, N panel > Image > under file path > message = Can't load image: see https://blenderartists.org/t/how-to-paint-an-image-sequence-i-can-only-view-it/1210707 Additional notes: Texture Paint > Image (menu) > "Save all images" is still present, was used for images sequence. Also tried using Composite > Images sequence node > Viewer + Render result (render result is a single generated image, we should be able to paint on it before saving it) to Texture Paint, no luck. Also tried adding it as a texture. No luck Also tried using Data API, pack checkbox is gone. Option > "Quick Edit" button is gone? It was pretty useful. Import image as plane correctly sets the frames number in the material, but N panel of texture paint is 100, like when creating a texture. Maybe not related, on linux, moving the brush center under the N panel freezes the mouse, you simply can't go under it. Based on the default startup [untitled.blend](https://archive.blender.org/developer/F8387560/untitled.blend)
Author

Added subscriber: @pm

Added subscriber: @pm
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

There are multiple issues reported here.

To properly track issues we need them to be reported separately.
Will concentrate on this [which I can confirm]:

In texture paint workspace (texture paint mode), image sequence is visible, playable, but not paintable

For all the "Additional Notes":

  • Please submit a new report for every individual bug.
  • I will clean up the original report according to this
There are multiple issues reported here. To properly track issues we need them to be reported separately. Will concentrate on this [which I can confirm]: > In texture paint workspace (texture paint mode), image sequence is visible, playable, but not paintable For all the "Additional Notes": - Please submit a new report for every individual bug. - I will clean up the original report according to this
Philipp Oeser self-assigned this 2020-03-04 13:00:00 +01:00
Member

Looks like c30d6571bb is the culprit here (along with some other UDIM commits which somewhat made the problem worse), will check...

Looks like c30d6571bb is the culprit here (along with some other UDIM commits which somewhat made the problem worse), will check...

This issue was referenced by 2bf4c74130

This issue was referenced by 2bf4c74130ff47c8442f23f1a9f039997dea1710

This issue was referenced by ca717f0489

This issue was referenced by ca717f0489af6854f3f4bedb3c1e82ea0a8dff1c
Author

Thanks Philipp!

Thanks Philipp!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74425
No description provided.